--- a/ProTechTiveGear/Views/Items/Create.cshtml
+++ b/ProTechTiveGear/Views/Items/Create.cshtml
@@ -142,7 +142,7 @@
 					var files = fileUpload.files;
 					//tạo đối tượng formdata
 					var formData = new FormData();
-					//dđưa dữ liệu vào form
+					//đưa dữ liệu vào form
 					formData.append('file', files[0]);
 					$.ajax({
 						type: 'POST',
