--- a/ProTechTiveGear/Views/Items/Details.cshtml
+++ b/ProTechTiveGear/Views/Items/Details.cshtml
@@ -13,7 +13,7 @@
 	<tr>
 		<td rowspan="8" width="30%">
 
-			<img src="~/img/Item/@Html.DisplayFor(model => model.Picture)">
+			<img src="~/img/Item/@Html.DisplayFor(model => model.Picture)" style="width : 400px">
 			<br />
 
 		</td>
@@ -33,12 +33,12 @@
 
 	</tr>
 	<tr>
-		<th>  @Html.DisplayNameFor(model => model.Quantity)</th>
+		<th>  Số lượng</th>
 		<td>      @Html.DisplayFor(model => model.Quantity)</td>
 
 	</tr>
 	<tr>
-		<th>  Số Lượng</th>
+		<th>  Ngày nhập</th>
 		<td>      @Html.DisplayFor(model => model.DateImport)</td>
 
 	</tr>
@@ -52,11 +52,12 @@
 		<td>      @Html.DisplayFor(model => model.ItemType.TypeName)</td>
 
 	</tr>
-	<tr>
-		<th>  Mô tả</th>
-		<td>     @Html.Raw(@Html.DisplayFor(model => model.Describe))</td>
+    <tr>
+        <th>  Mô tả</th>
+        @{ var mota = Model.Describe;}
+    <td>     @Html.Raw(mota)</td>
 
-	</tr>
+    </tr>
 	<tr>
 
 		<td></td>
